Fix navbar alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -65,7 +65,8 @@ body {
 }
 
 .Navbar a {
-    padding: 10px 10px 10px 2px;
+    padding: 10px;
+    white-space: nowrap;
     text-decoration: none;
     font-size: 18px;
     font-family: sans-serif;
